--- a/themes/upbound/layouts/partials/body/left-sidebar-nav.html
+++ b/themes/upbound/layouts/partials/body/left-sidebar-nav.html
@@ -1,152 +1,104 @@
-<div class="left-sidebar-nav offcanvas-xl offcanvas-start" tabindex="-1"
-id="left-nav-offcanvas" aria-labelledby="left-nav-offcanvas">
-        <nav aria-label="Documentation section navigation" class="container px-0" id="left-nav-menu">
-            <div class="list-group top-level d-flex">
-                <!-- First entry for the "Docs" section representing home.html -->
-                <div class="d-flex flex-row my-0 nav-parent-container position-relative list-group-item list-group-item-action {{if .IsHome }}active{{end}}" id="Docs">
-                    <div class="button-container left-offset">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M8 .5L1 7h2v7h4V9h2v5h4V7h2L8 .5zM2 6.707l6-6 6 6V15a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V6.707z"/>
-                            <path fill-rule="evenodd" d="M7 13v-4h2v4H7z"/>
-                        </svg>
-                    </div>
-                    <a href="{{.Site.BaseURL}}" class="stretched-link">Docs</a>
+<div class="left-sidebar-nav offcanvas-xl offcanvas-start" tabindex="-1" id="left-nav-offcanvas" aria-labelledby="left-nav-offcanvas">
+    <nav aria-label="Documentation section navigation" class="container px-0" id="left-nav-menu">
+        <div class="list-group top-level d-flex">
+            <!-- Home link -->
+            <div class="d-flex flex-row my-0 nav-parent-container position-relative list-group-item list-group-item-action {{if .IsHome }}active{{end}}" id="Docs">
+                <div class="button-container left-offset">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M8 .5L1 7h2v7h4V9h2v5h4V7h2L8 .5zM2 6.707l6-6 6 6V15a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V6.707z"/>
+                        <path fill-rule="evenodd" d="M7 13v-4h2v4H7z"/>
+                    </svg>
                 </div>
-
+                <a href="{{.Site.BaseURL}}" class="stretched-link">Docs</a>
+            </div>
 
             {{ $currentPage := . }}
 
-            <!-- Section Header: Guides -->
-            <div class="d-flex flex-row my-0 nav-section-header">
-                <span class="section-title">Guides</span>
-            </div>
-
-            <!-- Items under Guides -->
-            {{ range .Site.Sections.ByWeight }}
-                {{ if eq .Params.category "guides" }}
-                    {{ $expand := (or (eq $currentPage .) (eq $currentPage.FirstSection .)) }}
-                    {{ $id := substr (sha1 .Permalink) 0 8 }}
-
-                    <div class="d-flex flex-row my-0 nav-parent-container position-relative {{if eq $currentPage .}}active{{end}}" id="{{.Section}}" data-bs-toggle="collapse" data-bs-target="#collapse-{{$id}}" onclick="this.querySelector('.accordion-button').classList.toggle('collapsed')">
+            <!-- Define recursive template for rendering pages -->
+            {{ define "render-pages" }}
+                {{ $currentPage := .currentPage }}
+                {{ $depth := .depth }}
+                {{ range .pages }}
+                    {{ $hasPages := gt (len .Pages) 0 }}
+                    {{ $pageId := substr (sha1 .Permalink) 0 8 }}
+                    {{ $isActive := or (eq . $currentPage) (.IsAncestor $currentPage) }}
+                    {{ $isCurrentPage := eq . $currentPage }}
+                    <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row
+                              {{if $isActive}}active{{end}}
+                              {{if $isCurrentPage}}current-page{{end}}
+                              {{ if .Page.Params.tocHidden }}d-none{{end}}"
+                         style="padding-left: {{ mul $depth 1.5 }}rem">
                         <div class="button-container left-offset">
-                            <div id="{{.Section}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $expand}} collapsed {{end}}" type="button" aria-expanded="false" aria-controls="collapse-{{$id}}" title="Close/Expand"></div>
-                        </div>
-                        <span class="nav-parent-title">{{.Title }}</span>
-                    </div>
-
-                    <!-- Child Pages -->
-                    <div class="nav-child-container" id="{{.Section}}-children">
-                        <div class="collapse list-group {{if $expand}} show {{end}}" id="collapse-{{$id}}">
-                            {{ if .Content }}
-                                <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
-                                    <div class="button-container left-offset"></div>
-                                    <a href="{{.Permalink}}" class="stretched-link child-link">
-                                        Overview
-                                    </a>
+                            {{ if $hasPages }}
+                                <div id="{{.File.UniqueID}}-button"
+                                     class="mx-0 accordion-button accordion accordion-item {{if not $isActive}}collapsed{{end}}"
+                                     type="button"
+                                     data-bs-toggle="collapse"
+                                     data-bs-target="#collapse-{{$pageId}}"
+                                     aria-expanded="{{if $isActive}}true{{else}}false{{end}}"
+                                     aria-controls="collapse-{{$pageId}}"
+                                     title="Close/Expand">
                                 </div>
                             {{ end }}
-                            {{ range .Pages }}
-                                {{ $hasSubPages := gt (len .Pages) 0 }}
-                                {{ $subPageId := substr (sha1 .Permalink) 0 8 }}
-                                <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
-                                    <div class="button-container left-offset">
-                                        {{ if $hasSubPages }}
-                                            <div id="{{.File.UniqueID}}-button" class="mx-0 accordion-button accordion accordion-item {{if not (eq $currentPage .)}}collapsed{{end}}"
-                                                type="button"
-                                                data-bs-toggle="collapse"
-                                                data-bs-target="#collapse-{{$subPageId}}"
-                                                aria-expanded="{{if eq $currentPage .}}true{{else}}false{{end}}"
-                                                aria-controls="collapse-{{$subPageId}}"
-                                                title="Close/Expand">
-                                            </div>
-                                        {{ end }}
-                                    </div>
-                                    <a href="{{.Permalink}}" class="child-link {{if not $hasSubPages}}stretched-link{{end}}">
-                                        {{ .Title }}
-                                    </a>
-                                </div>
-                                {{ if $hasSubPages }}
-                                    <div class="collapse {{if eq $currentPage .}}show{{end}}" id="collapse-{{$subPageId}}">
-                                        {{ range .Pages }}
-                                            <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row subpage {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}" style="padding-left: 2.5rem;">
-                                                <div class="button-container left-offset"></div>
-                                                <a href="{{.Permalink}}" class="stretched-link child-link">
-                                                    {{ .Title }}
-                                                </a>
-                                            </div>
-                                        {{ end }}
-                                    </div>
-                                {{ end }}
-                            {{ end }}
                         </div>
+                        <a href="{{.Permalink}}" class="child-link {{if not $hasPages}}stretched-link{{end}}
+                                                    {{if $isCurrentPage}}current-page-link{{end}}">
+                            {{ .Title }}
+                        </a>
                     </div>
+                    {{ if $hasPages }}
+                        <div class="collapse {{if $isActive}}show{{end}}" id="collapse-{{$pageId}}">
+                            {{ template "render-pages" dict "pages" .Pages "currentPage" $currentPage "depth" (add $depth 1) }}
+                        </div>
+                    {{ end }}
                 {{ end }}
             {{ end }}
 
-            <!-- Section Header: Resources -->
-            <div class="d-flex flex-row my-0 nav-section-header">
-                <span class="section-title">Resources</span>
-            </div>
+            <!-- Section Headers and Content -->
+            {{ range $category := slice "guides" "resources" }}
+                <div class="d-flex flex-row my-0 nav-section-header">
+                    <span class="section-title">{{ title $category }}</span>
+                </div>
 
-            <!-- Items under Resources -->
-            {{ range .Site.Sections.ByWeight }}
-                {{ if eq .Params.category "resources" }}
-                    {{ $expand := (or (eq $currentPage .) (eq $currentPage.FirstSection .)) }}
-                    {{ $id := substr (sha1 .Permalink) 0 8 }}
+                {{ range $.Site.Sections.ByWeight }}
+                    {{ if eq .Params.category $category }}
+                        {{ $isActive := or (eq . $currentPage) (.IsAncestor $currentPage) }}
+                        {{ $id := substr (sha1 .Permalink) 0 8 }}
 
-                    <div class="d-flex flex-row my-0 nav-parent-container position-relative {{if eq $currentPage .}}active{{end}}" id="{{.Section}}" data-bs-toggle="collapse" data-bs-target="#collapse-{{$id}}" onclick="this.querySelector('.accordion-button').classList.toggle('collapsed')">
-                        <div class="button-container left-offset">
-                            <div id="{{.Section}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $expand}} collapsed {{end}}" type="button" aria-expanded="false" aria-controls="collapse-{{$id}}" title="Close/Expand"></div>
+                        <div class="d-flex flex-row my-0 nav-parent-container position-relative {{if $isActive}}active{{end}}"
+                             id="{{.Section}}"
+                             data-bs-toggle="collapse"
+                             data-bs-target="#collapse-{{$id}}"
+                             onclick="this.querySelector('.accordion-button').classList.toggle('collapsed')">
+                            <div class="button-container left-offset">
+                                <div id="{{.Section}}-button"
+                                     class="mx-0 accordion-button accordion accordion-item {{if not $isActive}} collapsed {{end}}"
+                                     type="button"
+                                     aria-expanded="{{if $isActive}}true{{else}}false{{end}}"
+                                     aria-controls="collapse-{{$id}}"
+                                     title="Close/Expand">
+                                </div>
+                            </div>
+                            <span class="nav-parent-title">{{.Title }}</span>
                         </div>
-                        <span class="nav-parent-title">{{.Title }}</span>
-                    </div>
 
-                    <!-- Child Pages -->
-                    <div class="nav-child-container" id="{{.Section}}-children">
-                        <div class="collapse list-group {{if $expand}} show {{end}}" id="collapse-{{$id}}">
-                            {{ if .Content }}
-                                <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
-                                    <div class="button-container left-offset"></div>
-                                    <a href="{{.Permalink}}" class="stretched-link child-link">
-                                        Overview
-                                    </a>
-                                </div>
-                            {{ end }}
-                            {{ range .Pages }}
-                                {{ $hasSubPages := gt (len .Pages) 0 }}
-                                {{ $subPageId := substr (sha1 .Permalink) 0 8 }}
-                                <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
-                                    <div class="button-container left-offset">
-                                        {{ if $hasSubPages }}
-                                            <div id="{{.File.UniqueID}}-button" class="mx-0 accordion-button accordion accordion-item {{if not (eq $currentPage .)}}collapsed{{end}}"
-                                                type="button"
-                                                data-bs-toggle="collapse"
-                                                data-bs-target="#collapse-{{$subPageId}}"
-                                                aria-expanded="{{if eq $currentPage .}}true{{else}}false{{end}}"
-                                                aria-controls="collapse-{{$subPageId}}"
-                                                title="Close/Expand">
-                                            </div>
-                                        {{ end }}
-                                    </div>
-                                    <a href="{{.Permalink}}" class="child-link {{if not $hasSubPages}}stretched-link{{end}}">
-                                        {{ .Title }}
-                                    </a>
-                                </div>
-                                {{ if $hasSubPages }}
-                                    <div class="collapse {{if eq $currentPage .}}show{{end}}" id="collapse-{{$subPageId}}">
-                                        {{ range .Pages }}
-                                            <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row subpage {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}" style="padding-left: 2.5rem;">
-                                                <div class="button-container left-offset"></div>
-                                                <a href="{{.Permalink}}" class="stretched-link child-link">
-                                                    {{ .Title }}
-                                                </a>
-                                            </div>
-                                        {{ end }}
+                        <div class="nav-child-container" id="{{.Section}}-children">
+                            <div class="collapse list-group {{if $isActive}} show {{end}}" id="collapse-{{$id}}">
+                                {{ if .Content }}
+                                    {{ $isOverviewActive := eq $currentPage.Permalink .Permalink }}
+                                    <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row
+                                              {{if $isOverviewActive}}active current-page{{end}}
+                                              {{ if .Page.Params.tocHidden }}d-none{{end}}">
+                                        <div class="button-container left-offset"></div>
+                                        <a href="{{.Permalink}}" class="stretched-link child-link {{if $isOverviewActive}}current-page-link{{end}}">
+                                            Overview
+                                        </a>
                                     </div>
                                 {{ end }}
-                            {{ end }}
+                                {{ template "render-pages" dict "pages" .Pages "currentPage" $currentPage "depth" 1 }}
+                            </div>
                         </div>
-                    </div>
+                    {{ end }}
                 {{ end }}
             {{ end }}
         </div>
