--- a/themes/upbound/layouts/_default/home.html
+++ b/themes/upbound/layouts/_default/home.html
@@ -9,7 +9,7 @@
        <div class="about-crossplane border border-2 about-box">
            <div class="d-flex justify-content-between">
                <div><h3>About Crossplane</h3></div>
-               <div class="about-link"><a href="/reference/crossplane-vs-upbound/">Learn More</a></div>
+               <div class="about-link"><a href="/learn/">Learn More</a></div>
            </div>
            <div class="about-image">
                <img class="mx-auto d-block img-fluid"
