--- a/themes/upbound/layouts/_default/home.html
+++ b/themes/upbound/layouts/_default/home.html
@@ -9,7 +9,7 @@
        <div class="about-crossplane border border-2 about-box">
            <div class="d-flex justify-content-between">
                <div><h3>About Crossplane</h3></div>
-               <div class="about-link"><a href="/reference/crossplane-vs-upbound/">Learn More</a></div>
+               <div class="about-link"><a href="/learn/">Learn More</a></div>
            </div>
            <div class="about-image">
                <img class="mx-auto d-block img-fluid"
@@ -35,7 +35,7 @@
                     height="45px"
                     width="auto">
            </div>
-           Upbound provides fully managed control planes to scale-up Crossplane to 10,000s of cloud resources without overloading your existing Kubernetes deployments.
+           Upbound provides fully control planes to scale-up Crossplane to 10,000s of cloud resources without overloading your existing Kubernetes deployments.
        </div>
    </div>
 
